<resources>
    <string name="app_name">Milhas</string>
    <string name="GOIBIBO_APP_ID"></string>
    <string name="GOIBIBO_APP_KEY"></string>
    <string name="GOIBIBO_REQUEST">http://developer.goibibo.com/api/search/?</string>
    <string name="iata_origin">IATA Origem</string>
    <string name="iata_destination">IATA Destino</string>
    <string name="date_of_departure">Data de Ida</string>
    <string name="date_of_return">Data da Volta</string>
    <string name="search_travel">PESQUISAR VIAGEM</string>
    <string name="air_company">Cia Aérea</string>
    <string name="departure">Partida</string>
    <string name="duration">Duração</string>
    <string name="arrival">Chegada</string>
</resources>
